Fix padding on tablet

--- a/universal-login-react/src/ui/styles/backup.sass
+++ b/universal-login-react/src/ui/styles/backup.sass
@@ -4,7 +4,7 @@
     position: relative
     max-width: 720px
     margin: 0 auto
-    padding-top: 110px
+    padding: 110px 15px 0
 
   .backup::before
     content: ''
