--- a/universal-login-react/src/ui/styles/devices.sass
+++ b/universal-login-react/src/ui/styles/devices.sass
@@ -13,7 +13,7 @@
 
   .devices-inner
     max-width: 770px
-    padding-top: 40px
+    padding: 40px 15px 0
     margin: 0 auto
 
     +media(s)
